# ctags

./: CMakeLists.txt  LICENSE  junk.txt
.ctags.d/: CMakeLists.txt
.github/: CMakeLists.txt
.github/workflows/: CMakeLists.txt
Tmain/: CMakeLists.txt
Tmain/abnormal-output-file-names.d/: CMakeLists.txt
Tmain/alias-for-unknown-language.d/: CMakeLists.txt
Tmain/allow-null-tag.d/: CMakeLists.txt
Tmain/broken-extradef.d/: CMakeLists.txt
Tmain/broken-fielddef.d/: CMakeLists.txt
Tmain/broken-json-output.d/: CMakeLists.txt
Tmain/broken-langdef.d/: CMakeLists.txt
Tmain/broken-paramdef.d/: CMakeLists.txt
Tmain/broken-tagname-in-ectags-format.d/: CMakeLists.txt
Tmain/broken-tagname-quiet.d/: CMakeLists.txt
Tmain/broken-tagname.d/: CMakeLists.txt
Tmain/c-anon-counter.d/: CMakeLists.txt  sources.cmake
Tmain/c-large-enum.d/: CMakeLists.txt
Tmain/case-insensitive-pattern.d/: CMakeLists.txt
Tmain/clear-aliases.d/: CMakeLists.txt
Tmain/client-vista-vim-fields-expectation.d/: CMakeLists.txt
Tmain/combination-of-fields-Zs.d/: CMakeLists.txt
Tmain/combination-of-fields-zkK.d/: CMakeLists.txt
Tmain/common-prelude.d/: CMakeLists.txt
Tmain/cxx-how-kinds-defs-are-shared-or-copyed.d/: CMakeLists.txt
Tmain/disable-fixed-field.d/: CMakeLists.txt
Tmain/disable-languages.d/: CMakeLists.txt
Tmain/dot-ctags-with-indentation.d/: CMakeLists.txt
Tmain/dynamic-kinds.d/: CMakeLists.txt
Tmain/e-ctags-output.d/: CMakeLists.txt  sources.cmake
Tmain/early--version-opt-processing.d/: CMakeLists.txt
Tmain/emacs-modeline-downcased-mode.d/: CMakeLists.txt
Tmain/emacs-modeline-non-alnum-in-head.d/: CMakeLists.txt
Tmain/emacs-modeline-non-alnum-in-head2.d/: CMakeLists.txt
Tmain/emacs-modeline-non-alnum-in-tail.d/: CMakeLists.txt
Tmain/emacs-modeline-uppercased-marker.d/: CMakeLists.txt
Tmain/emacs-modline-shell-script-zsh.d/: CMakeLists.txt
Tmain/enable-kind-postfix-with-wildcard.d/: CMakeLists.txt
Tmain/enable-kind-postfix.d/: CMakeLists.txt
Tmain/enable-kind-prefix-with-wildcard.d/: CMakeLists.txt
Tmain/enable-kind-prefix.d/: CMakeLists.txt
Tmain/enable-non-existing-kind.d/: CMakeLists.txt
Tmain/epoch-field.d/: CMakeLists.txt
Tmain/errors-about-parser-own-extras.d/: CMakeLists.txt
Tmain/errors-in-options-roles.d/: CMakeLists.txt
Tmain/excmd-combine-backward.d/: CMakeLists.txt
Tmain/excmd-combine.d/: CMakeLists.txt
Tmain/extension-vs-pattern.d/: CMakeLists.txt
Tmain/extras-field-for-pseudo-tags.d/: CMakeLists.txt
Tmain/extras-field.d/: CMakeLists.txt
Tmain/extras-long.d/: CMakeLists.txt
Tmain/filter-option-write-to-file.d/: CMakeLists.txt
Tmain/filter-option.d/: CMakeLists.txt
Tmain/fixed-field-handling-in-json-format.d/: CMakeLists.txt
Tmain/fixed-field-handling.d/: CMakeLists.txt
Tmain/flags-langdef-version.d/: CMakeLists.txt
Tmain/force-initializing-option.d/: CMakeLists.txt
Tmain/gcov-sandbox.d/: CMakeLists.txt
Tmain/generate-anon-ids.d/: CMakeLists.txt  sources.cmake
Tmain/getter-extras-field.d/: CMakeLists.txt
Tmain/input-encoding-option.d/: CMakeLists.txt
Tmain/interactive-mode.d/: CMakeLists.txt
Tmain/interactive-notice-output.d/: CMakeLists.txt
Tmain/interactive-option-write-to-file.d/: CMakeLists.txt
Tmain/interactive-resource-management.d/: CMakeLists.txt
Tmain/invalid-encoding-option.d/: CMakeLists.txt
Tmain/json-limit-recursion.d/: CMakeLists.txt
Tmain/json-output-backslash-in-input-field.d/: CMakeLists.txt
Tmain/json-output-boolean-fields.d/: CMakeLists.txt
Tmain/json-output-for-broken-input.d/: CMakeLists.txt
Tmain/json-output-format.d/: CMakeLists.txt
Tmain/json-output-much-parser-fields.d/: CMakeLists.txt
Tmain/json-output-to-file.d/: CMakeLists.txt
Tmain/json-ptag-in-list-extras.d/: CMakeLists.txt
Tmain/kind-abnormal-spec.d/: CMakeLists.txt
Tmain/kind-and-role-defaults.d/: CMakeLists.txt
Tmain/kind-long-lregex.d/: CMakeLists.txt
Tmain/kind-long.d/: CMakeLists.txt
Tmain/kinddef.d/: CMakeLists.txt
Tmain/kinds-all-with-spec.d/: CMakeLists.txt
Tmain/lang-sequel.d/: CMakeLists.txt
Tmain/lang-with-no-pattern.d/: CMakeLists.txt
Tmain/langmap-option-including-patterns.d/: CMakeLists.txt
Tmain/langmap-option.d/: CMakeLists.txt
Tmain/language-names.d/: CMakeLists.txt
Tmain/languages-and-language-force-options.d/: CMakeLists.txt
Tmain/line-regex-optscript.d/: CMakeLists.txt
Tmain/list-aliases.d/: CMakeLists.txt
Tmain/list-excludes.d/: CMakeLists.txt
Tmain/option-exclude-including-fsep.d/input.d/labze-a/: CMakeLists.txt  sources.cmake
Tmain/option-exclude-simple.d/input.d/bazel-z/: CMakeLists.txt
Tmain/readtags-qualifier-op-downcase-upcase.d/: CMakeLists.txt
Units/: CMakeLists.txt
Units/parser-c.r/enum-bit-fields.d/: CMakeLists.txt
Units/parser-c.r/properties-thread.d/: CMakeLists.txt
Units/parser-c.r/using-cxx-keyword-in-c-code.d/: CMakeLists.txt
Units/parser-cpreprocessor.r/asm-area.d/: CMakeLists.txt  sources.cmake
Units/parser-cpreprocessor.r/skip-newlines-in-literals.d/: CMakeLists.txt
Units/parser-cxx.r/attribute-sections.cpp-no-ldscript.d/: CMakeLists.txt
Units/parser-cxx.r/attribute-sections.cpp.d/: CMakeLists.txt  sources.cmake
Units/parser-cxx.r/end-field-for-prototype-kind.d/: CMakeLists.txt  sources.cmake
Units/parser-cxx.r/template-parameters.d/: CMakeLists.txt
Units/regex-flag-scope.r/intervaltab-linux-cb.d/: CMakeLists.txt
Units/writer-etags.r/simple-etags.d/: CMakeLists.txt
docs/: CMakeLists.txt
dsl/: CMakeLists.txt  sources.cmake
extra-cmds/: CMakeLists.txt  sources.cmake
gnulib/: CMakeLists.txt  fnmatch_loop.c  sources.cmake
libreadtags/: CMakeLists.txt  sources.cmake
m4/: CMakeLists.txt
main/: CMakeLists.txt  sources.cmake
makefiles/: CMakeLists.txt
man/: CMakeLists.txt
misc/: CMakeLists.txt  sources.cmake
misc/packcc/examples/ast-tinyc/inputs/: CMakeLists.txt  sources.cmake
old-docs/: CMakeLists.txt
optlib/: CMakeLists.txt  sources.cmake
parsers/: CMakeLists.txt  sources.cmake
peg/: CMakeLists.txt  sources.cmake
win32/: CMakeLists.txt  sources.cmake
(+1946 files in other folders)
